2006-07-19  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Checkpoint.py (Checkpoint.init_gui): Detect whether
	rcs program is present and modify UI accordingly.
	* src/plugins/checkpoint.glade: Add hidden warning label.
	* src/plugins/StatisticsChart.py
	(StatisticsChartOptions.get_report_filters): Add custom filters.
	* src/plugins/Calendar.py (FilterWidget.get_filters): Add custom
	filters.
	* src/plugins/TimeLine.py (TimeLineOptions.get_report_filters):
	Add custom filters.
	* src/plugins/IndivComplete.py
	(IndivCompleteOptions.get_report_filters): Add custom filters.
	* src/plugins/NarrativeWeb.py
	(WebReportOptions.get_report_filters): Add custom filters. 
	* src/plugins/GraphViz.py (GraphViz.__init__): Take care of the
	encoding errors;
	(GraphVizOptions.get_report_filters): Add custom filters.

2006-07-19  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
	* src/GrampsCfg.py: UI improvements.
	* src/Config/_GrampsIniKeys.py: Proper key retrieval.

2006-07-19  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/EventCmp.py (filter_editor_clicked): Adapt to filter
	editor changes; Stop separately adding birth and death.
	* src/Filters/Makefile.am (pkgdata_PYTHON): Ship new file.

2006-07-18  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py (ArgHandler.cl_export): Properly expand filename.
	* src/GrampsDb/_WriteGrdb.py (exportData): Use placeholder if
	callback is None.
	* src/GrampsDb/_GrampsBSDDB.py
	(_delete_primary_from_reference_map): defer deleting until the
	cursor is closed.

2006-07-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Make it work for Windows

2006-07-18  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_DateBase.py: fix the date comparison for text only 
	dates

2006-07-17  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: typo
	* src/plugins/NarrativeWeb.py: fix name sorting in Windows (bug #236)

2006-07-16  Alex Roitman  <shura@gramps-project.org>