@@ -1,3 +1,10 @@
+2006-07-20  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsCfg.py (add_name_panel): Minor UI improvements;
+	(_build_custom_name_ui): Minor UI improvements;
+	(cb_edit_fmt_str): Make correct transient_for call.
+	* src/gramps.glade (namefmt_edit): Add expander with the help on
+	format definitions; minor UI improvements.
+
 2006-07-19  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/Checkpoint.py (Checkpoint.init_gui): Detect whether
 	rcs program is present and modify UI accordingly.
